--- a/pcrmgmtAPP/templates/base.html
+++ b/pcrmgmtAPP/templates/base.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+
     <!-- Main Styles -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <!-- Custom CSS for squares, new design, etc. -->
@@ -89,3 +91,7 @@
     <script src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
 </body>
 </html>
+
+.cke_notifications_area  {
+  display: none;
+}
