--- a/pcrmgmtAPP/static/css/custom.css
+++ b/pcrmgmtAPP/static/css/custom.css
@@ -321,3 +321,9 @@ body.high-contrast .table-striped tbody tr:nth-of-type(odd) {
   height: 20px;
   display: inline-block;
 }
+
+@media print {
+  .no-print {
+    display: none !important;
+  }
+}
